I've pushed it!

--- a/create.html
+++ b/create.html
@@ -78,7 +78,7 @@
           <span>Home > <a href="#">Join BLACK</a></span>
           <div class="buttons">
             <div class="main-button">
-              <a href="create.html">View BLACK Organisation</a>
+              <a href="organisation.html">View BLACK Organisation</a>
             </div>
             <div class="border-button">
               <a href="create.html">Privacy Statement</a>
@@ -109,6 +109,10 @@
             <ul class="dropdown-menu">
               <li><button class="dropdown-item" type="button">ui/ux Designing</li>
               <li><button class="dropdown-item" type="button">Programming</button></li>
+              <li><button class="dropdown-item" type="button">Programming</button></li>
+              <li><button class="dropdown-item" type="button">Bussiness oriented</button></li>
+              <li><button class="dropdown-item" type="button">Project Managment</button></li>
+              <li><button class="dropdown-item" type="button">Hardware oriented</button></li>
               <li><button class="dropdown-item" type="button">Server-side Programming</button></li>
             </ul>
           </div>
@@ -126,14 +130,14 @@
               <br>
               <div class="col-lg-6">
                 <fieldset>
-                  <label for="Email"><b>Email</b></label>
+                  <label for="Email"><b>Email</b></label> <i class="fa fa-envelope"></i>
                   <input type="email" name="description" id="description" placeholder=" enter your email.." autocomplete="on" required>
                 </fieldset>
               </div>
             
               <div class="col-lg-4">
                 <fieldset>
-                  <label for="price"><b>Password</b></label>
+                  <label for="price"><b>Password</b></label> <i class="fa fa-key"></i>
                   <input type="desc" name="price" id="price" placeholder="enter Password.." autocomplete="on" required>
                 </fieldset>
               </div>
@@ -179,21 +183,27 @@
           <div class="row">
             <div class="col-4">
               <span class="bid">
-                <i class=" fas fa-comment"></i>  <b>Facebook</b><br>(@ BLACK-official)
+                <i class=" fas fa-comment"></i>      <b>Facebook</b><br>(@ BLACK-official)
             </div>
             <div class="col-4">
               <span class="owner">
-                <i class=" fas fa-comment"></i>  <b>Linkedin</b><br>(@ BLACK-official)
+                <i class=" fas fa-comment"></i>      <b>Linkedin</b><br>(@ BLACK-official)
               </span>
             </div>
             <div class="col-4">
               <span class="owner">
-                <i class=" fas fa-comment"></i>  <b>Instagram</b><br>(@ BLACK-official)
+                <i class=" fas fa-comment"></i>      <b>Instagram</b><br>(@ BLACK-official)
               </span>
             </div>
+            <div class="col-4">
+              <span class="owner">
+                <i class=" fas fa-comment"></i>      <b>X</b><br>(@ BLACK-official)
+              </span>
+            </div>
+            
             <div class="col-4">
               <span class="ends">
-                <i class=" fas fa-user-cog"></i>  <b>contact us</b><br>(+250784016940)
+                <i class=" fas fa-user-cog"></i>      <b>contact us</b><br>(+250784016940)
               </span>
             </div>
           </div>
