--- a/about.html
+++ b/about.html
@@ -20,13 +20,7 @@
     <link rel="stylesheet" href="assets/css/owl.css">
     <link rel="stylesheet" href="assets/css/animate.css">
     <link rel="stylesheet"href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
-<!--
 
-TemplateMo 577 Liberty Market
-
-https://templatemo.com/tm-577-liberty-market
-
--->
   </head>
 
 <body>
@@ -95,7 +89,7 @@ https://templatemo.com/tm-577-liberty-market
         <div class="col-lg-6">
           <div class="author">
             <img src="assets/images/single-author.jpg" alt="" style="border-radius: 50%; max-width: 170px;">
-            <h4>C E O  AND    INITIATOR<br> <a href="#">@ BENJAJMIN MPANO</a></h4>
+            <h4>C E O  AND    INITIATOR<br> <a href="organisation.html">@ BENJAJMIN MPANO</a></h4>
           </div>
         </div>
         <div class="col-lg-6">
@@ -532,7 +526,7 @@ https://templatemo.com/tm-577-liberty-market
             <div class="icon">
               <img src="assets/images/icon-02.png" alt="">
             </div>
-            <h4>Set Up Your Wallet</h4>
+            <h4>Lorem ipsum</h4>
             <p>Lorem ipsum dolor sit amet, consectetu dipiscingei elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
         </div>
@@ -544,7 +538,7 @@ https://templatemo.com/tm-577-liberty-market
             <div class="icon">
               <img src="assets/images/icon-04.png" alt="">
             </div>
-            <h4>Add Your Digital NFT</h4>
+            <h4>Lorem ipsum Lorem ipsum</h4>
             <p>Lorem ipsum dolor sit amet, consectetu dipiscingei elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
         </div>
@@ -553,7 +547,7 @@ https://templatemo.com/tm-577-liberty-market
             <div class="icon">
               <img src="assets/images/icon-06.png" alt="">
             </div>
-            <h4>Sell Your NFT &amp; Make Profit</h4>
+            <h4>Lorem ipsum &amp; Lorem ipsum </h4>
             <p>Lorem ipsum dolor sit amet, consectetu dipiscingei elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
         </div>
