--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
                         <li><a href="departments.html">Departments</a></li>
                         <li><a href="about.html" class="active">About BLACK</a></li>
                         <li><a href="create.html">Join BLACK</a></li>
-                        <li><a href="#">FAQS</a></li>
+                        <li><a href="faq.html">FAQs</a></li>
                     </ul>   
                     <a class='menu-trigger'>
                         <span>Menu</span>
@@ -77,6 +77,13 @@
           <h2>Know More About BLACK COMPANY</h2>
           <span>Home > <a href="#">About BLACK</a></span>
          
+          <div class="buttons">
+            <div class="main-button">
+              <a href="organisation.html">View BLACK Organisation</a>
+            </div>
+            <div class="border-button">
+              <a href="privacy.html">Privacy Statement</a>
+            </div>
           </div>
         </div>
       </div>
