--- a/create.html
+++ b/create.html
@@ -56,7 +56,7 @@
                         <li><a href="departments.html">Departments</a></li>
                         <li><a href="about.html">About BLACK</a></li>
                         <li><a href="create.html" class="active">Join BLACK</a></li>
-                        <li><a href="#">FAQS</a></li>
+                        <li><a href="faq.html">FAQs</a></li>
                     </ul>   
                     <a class='menu-trigger'>
                         <span>Menu</span>
@@ -81,7 +81,7 @@
               <a href="organisation.html">View BLACK Organisation</a>
             </div>
             <div class="border-button">
-              <a href="create.html">Privacy Statement</a>
+              <a href="privacy.html">Privacy Statement</a>
             </div>
           </div>
         </div>
@@ -98,10 +98,7 @@
             <h2>Fill the form to <em>Join BLACK</em> Here.</h2>
           </div>
         </div>
-        
-
         <div class="container mt-4">
-
           <div class="btn-group">
             <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
               What are you interesting in ?
