--- a/project.html
+++ b/project.html
@@ -56,7 +56,7 @@
                         <li><a href="departments.html">Departments</a></li>
                         <li><a href="about.html">About BLACK</a></li>
                         <li><a href="create.html">Send Feedback</a></li>
-                        <li><a href="#">FAQS</a></li>
+                        <li><a href="faq.html">FAQs</a></li>
                     </ul>   
                     <a class='menu-trigger'>
                         <span>Menu</span>
@@ -76,9 +76,6 @@
           <h6>BLACK COMPANY</h6>
           <h2>Discover Some Our Finished Projects</h2>
           <span>Home > <a href="#">Projects</a></span>
-        </div>
-      </div>
-    </div>
     <div class="featured-explore">
       <div class="container-fluid">
         <div class="row">
